--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LandingPage</title>
-  <link href="font.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
-  <link href="hamburger.css" rel="stylesheet">
-  <link href="footer.css" rel="stylesheet">
+  <link href="/css/font.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
+  <link href="/css/hamburger.css" rel="stylesheet">
+  <link href="/css/footer.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
