--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,99 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LandingPage</title>
-  <link href="/css/font.css" rel="stylesheet">
-  <link href="/css/main.css" rel="stylesheet">
-  <link href="/css/hamburger.css" rel="stylesheet">
-  <link href="/css/footer.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LandingPage</title>
+    <link href="/css/font.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/hamburger.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+<!--    <script>-->
+<!--        document.addEventListener("DOMContentLoaded", function () {-->
+<!--            var infoNav = document.getElementById("infoNav");-->
+
+<!--            infoNav.addEventListener("click", function () {-->
+<!--                window.location.href = "https://naver.com";-->
+<!--            });-->
+<!--        });-->
+<!--    </script>-->
+
 </head>
 <style>
-  body {font-family: 'SUIT', sans-serif;}
+    body {
+        font-family: 'SUIT', sans-serif;
+    }
+
+    a {
+      text-decoration: none;
+      color: black;
+    }
 </style>
 <body>
-  <header>
+<header>
     <nav class="navigation sticky-top">
-      <div class="row">
-        <div class="col-md-4 col d-flex justify-content-md-end justify-content-start px-5">
-          <img class="navigation" id="nav-img" src="./img/logo.png">
+        <div class="row">
+            <div class="col-md-4 col d-flex justify-content-md-end justify-content-start px-5">
+                <img class="navigation" id="nav-img" src="./img/logo.png">
+            </div>
+            <div class="col-md-4 col d-flex justify-content-md-center justify-content-end align-items-center">
+                <li class="nav-menu">
+                    <ul class="nav-font" id="infoNav">
+                        <a href="https://picayune-rhinoceros-77c.notion.site/685cf50dedf14ecaafa84dcf4a2d936c?pvs=4">페이릿 소개</a>
+                    </ul>
+                    <ul class="nav-font" id="faqNav">
+                      <a href="https://picayune-rhinoceros-77c.notion.site/FAQ-e0cc07f666844877b0d547369ae775e8?pvs=4">FAQ</a>
+                    </ul>
+                    <ul class="nav-font" id="chatNav">
+                      <a href="https://pf.kakao.com/_djxmxiG/chat">고객센터</a>
+                    </ul>
+                  <ul class="nav-font" id="serviceInfoNav">
+                    <a href="https://picayune-rhinoceros-77c.notion.site/57721e2e46bf46b7a15cc05afec24fc3?pvs=74">이용약관</a>
+                  </ul>
+                </li>
+                <a class="toggle-btn" href="#">
+                    <img id="hamburger-img" src="./img/hamberger.png">
+                </a>
+            </div>
         </div>
-        <div class="col-md-4 col d-flex justify-content-md-center justify-content-end align-items-center">
-            <li class="nav-menu">
-              <ul class="nav-font" id="navInput">페어릿 소개</ul>
-              <ul class="nav-font" id="navInput">소식</ul>
-              <ul class="nav-font" id="navInput">고객센터</ul>
-            </li>
-            <a class="toggle-btn" href="#">
-              <img id="hamburger-img" src="./img/hamberger.png">
-            </a>
-        </div>
-      </div>
     </nav>
-  </header>
-  <section class="main">
+</header>
+<section class="main">
     <div class="main-content row">
-      <div class="main-describe col-md-6 d-flex justify-content-center align-items-center">
-        <div class="d-flex flex-column justify-content-center align-items-md-start align-items-center">
-          <div class="main-text d-flex flex-column">
-            <span>간편하고 간단하게 기록하는</span>
-            <span>우리의 돈거래 시작점</span>
-            <span class="main-title py-2">페이릿</span>
-          </div>
-          <div class="main-box d-flex">
-              <div class="box">
-                <img id="main-img" src="./img/apple.png">
-              </div>
-              <div class="box">
-                <img id="main-img" src="./img/android.png">
-              </div>
-          </div>
+        <div class="main-describe col-md-6 d-flex justify-content-center align-items-center">
+            <div class="d-flex flex-column justify-content-center align-items-md-start align-items-center">
+                <div class="main-text d-flex flex-column">
+                    <span>간편하고 간단하게 기록하는</span>
+                    <span>우리의 돈거래 시작점</span>
+                    <span class="main-title py-2">페이릿</span>
+                </div>
+                <div class="main-box d-flex">
+                    <a class="box" href="https://apps.apple.com/kr/app/%ED%8E%98%EC%9D%B4%EB%A6%BF-payrit/id6480038044">
+                        <img id="main-img" src="./img/apple.png">
+                    </a>
+                    <a class="box" href="https://play.google.com/store/apps/details?id=com.alltimeowl.payrit&hl=ko&gl=US">
+                        <img id="main-img" src="./img/android.png">
+                    </a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-md-6 com-sm-12 d-flex d-none d-md-block">
-        <div class="main-phone d-flex justify-content-center align-items-center">
-          <img id="phone-img" src="./img/mainphone.png">
+        <div class="col-md-6 com-sm-12 d-flex d-none d-md-block">
+            <div class="main-phone d-flex justify-content-center align-items-center">
+                <img id="phone-img" src="./img/mainphone.png">
+            </div>
         </div>
-      </div>
     </div>
     <div class="main-banner d-flex justify-content-center align-items-center">
-      <div class="banner-text d-flex justify-content-center align-items-center flex-column">
-        <span>간편하고 간단하게</span>
-        <span>서로의 신뢰를 지켜요</span>
-      </div>
+        <div class="banner-text d-flex justify-content-center align-items-center flex-column">
+            <span>간편하고 간단하게</span>
+            <span>서로의 신뢰를 지켜요</span>
+        </div>
     </div>
-  </section>
-  <section class="home">
+</section>
+<section class="home">
 
-  </section>
-  <section class="write">
+</section>
+<section class="write">
 
-  </section>
-  <section class="notice">
+</section>
+<section class="notice">
 
-  </section>
-  <footer class="footer footer-text">
-      <div>
+</section>
+<footer class="footer footer-text">
+    <div>
         <img id="footer-img" src="./img/logo.png">
-      </div>
-      <div class="footer footer-content">
+    </div>
+    <div class="footer footer-content">
         <span>(주) 멋쟁이 사자처럼</span>
         <div class="footer">
-          <span>사업자 등록번호 264-88-011106 | 대표이사 나성영</span>
-          <span>서울특별시 종로구 종로3길 17 D타워, 16-17층</span>
+            <span>사업자 등록번호 264-88-011106 | 대표이사 나성영</span>
+            <span>서울특별시 종로구 종로3길 17 D타워, 16-17층</span>
         </div>
         <span class="footer-sub">고객지원 payrit@payrit.info</span>
         <span>Copyright ⓒ Payrit All Rights Reserved.</span>
-      </div>
-  </footer>
+    </div>
+</footer>
 
-  <script src="./landing.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="./landing.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </body>
 </html>
